# modern-cmake-by-example

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  answer.cpp  answer.hpp  main.cpp
answer/: CMakeLists.txt  answer.cpp
answer/include/answer/: answer.hpp
answer/tests/: CMakeLists.txt  test_check_the_answer.cpp
assets/: dependency-graph.drawio
curl_wrapper/: CMakeLists.txt  curl_wrapper.cpp
curl_wrapper/include/curl_wrapper/: curl_wrapper.hpp
wolfram/: CMakeLists.txt  alpha.cpp
wolfram/include/wolfram/: alpha.hpp
